# GaiaXPy

./: .gitignore  .readthedocs.yaml  LICENCE  LICENSE  MANIFEST.in  NEWS.txt  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml  python-publish.yml
docs/: Makefile  caveats.rst  cite.rst  conf.py  description.rst  faqs.rst  gaiaxpy.config.rst  gaiaxpy.core.rst  gaiaxpy.error_correction.rst  gaiaxpy.generator.rst  installation.rst  modules.rst  releasenotes.rst  requirements.txt  usage.rst
docs/source/: caveats.rst  cite.rst  conf.py  description.rst  faqs.rst  gaiaxpy.calibrator.rst  gaiaxpy.cholesky.rst  gaiaxpy.colour_equation.rst  gaiaxpy.config.rst  gaiaxpy.converter.rst  gaiaxpy.core.rst  gaiaxpy.error_correction.rst  gaiaxpy.file_parser.rst  gaiaxpy.generator.rst  gaiaxpy.input_reader.rst  gaiaxpy.linefinder.rst  gaiaxpy.output.rst  gaiaxpy.parser.rst  gaiaxpy.plotter.rst  gaiaxpy.rst  gaiaxpy.simulator.rst  gaiaxpy.spectrum.rst  improvements.rst  index.rst  installation.rst  links.rst  modules.rst  releasenotes.rst  usage.rst
gaiaxpy/: __init__.py
gaiaxpy/calibrator/: __init__.py  calibrator.py  external_instrument_model.py
gaiaxpy/cholesky/: __init__.py  cholesky.py
gaiaxpy/colour_equation/: __init__.py  xp_filter_system_colour_equation.py
gaiaxpy/config/: MiogLiteModel_1nmX240_V3_v375wiv142r_config.ini  OptimisedCalibratedBases_BpId32_RpId37_withNormalisation.xml  __init__.py  available_systems.txt  bpC03_v211w_bases.csv  bpC03_v211w_dispersion.csv  bpC03_v375wi_dispersion.csv  bpC03_v375wi_response.csv  config.ini  fluxCal_20230901_renorm_bspline.xml  paths.py  rpC03_v142r_bases.csv
gaiaxpy/converter/: __init__.py  config.py  converter.py
gaiaxpy/core/: __init__.py  config.py  custom_errors.py  dispersion_function.py  generic_functions.py  generic_variables.py  input_validator.py  nature.py  satellite.py  server.py  version.py  xml_utils.py
gaiaxpy/error_correction/: __init__.py  error_correction.py
gaiaxpy/file_parser/: __init__.py  cast.py  parse_external.py  parse_generic.py  parse_internal_continuous.py  parse_internal_sampled.py  parse_inverse.py  utils.py
gaiaxpy/finder/: linefinder.py  lines.py
gaiaxpy/generator/: __init__.py  config.py  generator.py  internal_photometric_system.py  multi_synthetic_photometry_generator.py  photometric_system.py  regular_photometric_system.py  standardised_photometric_system.py  synthetic_photometry_generator.py  utils.py
gaiaxpy/input_reader/: __init__.py  archive_reader.py  dataframe_numpy_array_reader.py  dataframe_reader.py  dataframe_string_array_reader.py  file_reader.py  hdfs_reader.py  input_reader.py  list_reader.py  local_file_reader.py  mandatory_columns.py  query_reader.py  required_columns.py
gaiaxpy/linefinder/: herm.py  linefinder.py  lines.py  plotter.py  utils.py
gaiaxpy/lines/: find_lines.py  herm.py  linefinder.py  lines.py  plotter.py
gaiaxpy/output/: __init__.py  continuous_spectra_data.py  line_data.py  output_data.py  photometry_data.py  sampled_spectra_data.py  utils.py
gaiaxpy/plotter/: __init__.py  multi_absolute.py  multi_xp.py  plot_spectra.py  plotter.py  single.py
gaiaxpy/simulator/: __init__.py  config.py  rebin.py  simulator.py  xp_instrument_model.py
gaiaxpy/spectrum/: __init__.py  absolute_sampled_spectrum.py  calibration_absolute_sampled_spectrum.py  generic_spectrum.py  multi_synthetic_photometry.py  sampled_basis_functions.py  utils.py  (+6 more)
(+519 files in other folders)
