[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'GaiaXPy'
dependencies = [
  'aenum',
  'astropy!=7.0.0,!=7.0.1',
  'astroquery',
  'fastavro',
  'hdfs',
  'matplotlib',
  'numpy',
  'packaging',
  'pandas>=1.5.0',
  'scipy',
  'tqdm>=4.64.0'
]
dynamic = [
  'authors',
  'classifiers',
  'description',
  'maintainers',
  'optional-dependencies',
  'readme',
  'requires-python',
  'version'
]

[project.urls]
homepage = 'https://gaia-dpci.github.io/GaiaXPy-website/'
documentation = 'https://gaiaxpy.readthedocs.io/en/latest/'

[tool.setuptools]
packages = ['gaiaxpy']
package-dir = {'' = 'src'}
